Preparing and fix .yaml for release
