# other/controllers/Seminar.js
@@ -16,40 +16,16 @@ module.exports.getAll = function getAll (req, res, next) {
     });
 };
 
-module.exports.findByName = function findByName (req, res, next) {
-  var name = req.swagger.params['name'].value;
-  var offset = req.swagger.params['offset'].value;
-  var limit = req.swagger.params['limit'].value;
-
-  Seminar.findBooksByAuthor(name, offset, limit)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
-module.exports.findByEvent = function findByEvent (req, res, next) {
-  var ID = req.swagger.params['ID'].value;
-  var offset = req.swagger.params['offset'].value;
-  var limit = req.swagger.params['limit'].value;
-
-  Seminar.findByEvent(ID, offset, limit)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
 module.exports.getByID = function getByID(req, res, next){
   var id = req.swagger.params['ID'].value;
 
   Seminar.getByID(id)
     .then(function (response) {
-      utils.writeJson(res, response);
+      if(response.length > 0){        
+        utils.writeJson(res, response[0]);
+      } else {
+        utils.writeJson(res, {});
+      }
     })
     .catch(function (response) {
       utils.writeJson(res, response);
